[gd_scene load_steps=7 format=3 uid="uid://cmm64vegvy3ap"]

[ext_resource type="Script" path="res://Menus/WinMenu.gd" id="1_u554y"]
[ext_resource type="FontFile" uid="uid://c5mfmgf8df6t6" path="res://Assets/Fonts/SquareCool.ttf" id="1_vdt6o"]
[ext_resource type="AudioStream" uid="uid://bs2jsinhbl5p" path="res://Assets/Audio/WinMenu.mp3" id="3_2ooon"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fiugw"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)
border_width_top = 6
border_width_right = 8
border_color = Color(0.4, 0.4, 0.4, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d235f"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 1)
border_width_top = 6
border_width_right = 8
border_color = Color(0.4, 0.4, 0.4, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c7ffu"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.4, 0.4, 0.4, 1)
border_width_top = 6
border_width_right = 8
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="WinMenu" type="Node2D"]
script = ExtResource("1_u554y")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.5
offset_top = -117.0
offset_right = 226.5
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(230, 105)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ColorRect/CenterContainer"]
layout_mode = 2

[node name="MM" type="Button" parent="CanvasLayer/ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.309804, 0.309804, 0.309804, 1)
theme_override_colors/font_hover_color = Color(0.309804, 0.309804, 0.309804, 1)
theme_override_colors/font_hover_pressed_color = Color(0.309804, 0.309804, 0.309804, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_vdt6o")
theme_override_font_sizes/font_size = 55
theme_override_styles/normal = SubResource("StyleBoxFlat_fiugw")
theme_override_styles/hover = SubResource("StyleBoxFlat_d235f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c7ffu")
text = "Main Menu"

[node name="TF" type="Button" parent="CanvasLayer/ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.309804, 0.309804, 0.309804, 1)
theme_override_colors/font_hover_color = Color(0.309804, 0.309804, 0.309804, 1)
theme_override_colors/font_hover_pressed_color = Color(0.309804, 0.309804, 0.309804, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_vdt6o")
theme_override_font_sizes/font_size = 55
theme_override_styles/normal = SubResource("StyleBoxFlat_fiugw")
theme_override_styles/hover = SubResource("StyleBoxFlat_d235f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c7ffu")
text = " Toggle Fullscreen "

[node name="Exit" type="Button" parent="CanvasLayer/ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.309804, 0.309804, 0.309804, 1)
theme_override_colors/font_hover_color = Color(0.309804, 0.309804, 0.309804, 1)
theme_override_colors/font_hover_pressed_color = Color(0.309804, 0.309804, 0.309804, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_vdt6o")
theme_override_font_sizes/font_size = 55
theme_override_styles/normal = SubResource("StyleBoxFlat_fiugw")
theme_override_styles/hover = SubResource("StyleBoxFlat_d235f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c7ffu")
text = "Exit INVERT"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -372.5
offset_top = 72.0
offset_right = 452.5
offset_bottom = 257.0
grow_horizontal = 2

[node name="WinMessage" type="Label" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.309804, 0.309804, 0.309804, 1)
theme_override_colors/font_outline_color = Color(0.4, 0.4, 0.4, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = -3
theme_override_constants/outline_size = 13
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("1_vdt6o")
theme_override_font_sizes/font_size = 160
text = "You Win!"
metadata/_edit_use_anchors_ = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2ooon")

[connection signal="pressed" from="CanvasLayer/ColorRect/CenterContainer/VBoxContainer/MM" to="." method="_on_mm_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/CenterContainer/VBoxContainer/TF" to="." method="_on_tf_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/CenterContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
